--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.33.0",
     "@modelcontextprotocol/sdk": "latest",
+    "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
     "idb": "8.0.0",
     "jspdf": "2.5.1",
