--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.33.0",
     "@modelcontextprotocol/sdk": "latest",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "firebase": "^12.7.0",
     "idb": "8.0.0",
     "jspdf": "2.5.1",
@@ -21,7 +22,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.22.3",
-    "recharts": "2.12.3"
+    "recharts": "2.12.3",
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
