--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@google/genai": "^1.33.0",
     "@modelcontextprotocol/sdk": "latest",
+    "@types/file-saver": "^2.0.7",
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^12.7.0",
     "idb": "8.0.0",
     "jspdf": "2.5.1",
     "jspdf-autotable": "3.8.2",
     "jszip": "3.10.1",
     "lucide-react": "0.344.0",
+    "pdf-lib": "^1.17.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.22.3",
