--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "jszip": "3.10.1",
     "lucide-react": "0.344.0",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.530",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.22.3",
     "recharts": "2.12.3",
+    "tesseract.js": "^7.0.0",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
   },
