Fix: Add Cache-Control no-cache headers to nginx.conf for HTML files

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,11 +5,17 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    location / {
-        try_files $uri $uri/ /index.html;
+    # 1. HTML & Root: Never Cache (Force new version check)
+    location ~* \.html$ {
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
     }
 
-    # Optional: Cache control for static assets
+    location / {
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
+    }
+
+    # 2. Static Assets: Cache Long (Vite handles hashing)
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, no-transform";
